# esp32-simple-iot-framework

./: CMakeLists.txt  Kconfig  README  README.md  component.mk  library.json  library.properties  license.txt  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old
components/ESP32SimpleIOT/: CMakeLists.txt
components/ESP32SimpleIOT/include/: global.hpp
components/ESP32SimpleIOT/src/: iot.cpp
examples/test-esp32-simple-iot-framework/: .gitignore  CMakeLists.txt  LittleFSBuilder.py  README.md  partitions.csv  platformio.ini  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old
examples/test-esp32-simple-iot-framework/data/: config.json  config.json.sample
examples/test-esp32-simple-iot-framework/src/: Kconfig.projbuild  app.cpp  app.hpp  main.cpp
include/: battery.hpp  config.hpp  esp_now.hpp  global.hpp  iot.hpp  udp.hpp  wifi.hpp
src/: CMakeLists.txt  Kconfig  Kconfig.projbuild  battery.cpp  config.cpp  esp_now.cpp  global.cpp  iot.cpp  udp.cpp  wifi.cpp
